--- a/Translations/Interface/Русский.json
+++ b/Translations/Interface/Русский.json
@@ -208,7 +208,7 @@
     "%ROUTE_PROGRESS_4%": "Обработка результата...",
     "%ROUTE_PROGRESS_5%": "Запрос высоты...",
     "%ROUTE_PROGRESS_6%": "Готово!",
-    "%HEATMAP_SEEN%": "Найдено {0} покестопов",
+    "%HEATMAP_SEEN%": "Найдено {0} покемонов",
     "%ROUTE_PROGRESS_1%": "Прогресс маршрута",
     "%ADD_ACTION%": "Добавить действия",
     "%CLOSE%": "Закрыть",
